[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Player/anim_mesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/art/shapes/empty64.png" type="Texture" id=3]
[ext_resource path="res://scenes/Utility/BackButton/BackButton.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.35
height = 189.382

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 89.8437, 5.00002 )

[node name="Player" type="KinematicBody2D"]
rotation = 6.28319
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="WeaponPanel" type="Panel" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -123.0
margin_right = 82.0
margin_bottom = -35.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="HUD/WeaponPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -76.0
margin_right = 70.0
margin_bottom = -12.0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Weapon" type="TextureButton" parent="HUD/WeaponPanel/Container"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Throwable" type="TextureButton" parent="HUD/WeaponPanel/Container"]
margin_left = 76.0
margin_right = 140.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 3 )
expand = true

[node name="BackButton" parent="HUD" instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="mesh" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -200 )
current = true

[node name="WeaponDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponDetector"]
position = Vector2( 5.8443, 119 )
shape = SubResource( 39 )

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
margin_left = -56.0007
margin_top = -163.0
margin_right = 55.9993
margin_bottom = -149.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoSaveTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="HUD/WeaponPanel/Container/Throwable" to="." method="_on_Throwable_pressed"]
[connection signal="body_entered" from="WeaponDetector" to="." method="_on_WeaponDetector_body_entered"]
[connection signal="timeout" from="AutoSaveTimer" to="." method="_on_AutoSaveTimer_timeout"]
